--- a/docker/Views/school/student.cshtml
+++ b/docker/Views/school/student.cshtml
@@ -155,7 +155,7 @@
 </template>
 <template id="app-form">
     <div>
-        <div class="wln-title" style="margin:30px;">学员资料</div>
+        <div class="wln-title">学员资料</div>
         <el-form ref="form" v-model="form" label-width="0px" style="width:720px;">
             <el-form-item>
                 <el-col :span="3" class="label">姓名&nbsp;</el-col>
