--- a/docker/Views/app/staff.cshtml
+++ b/docker/Views/app/staff.cshtml
@@ -1,31 +1,31 @@
-﻿<div id="app"><router-view></router-view></div>
+﻿<div id="app" class="wln"><router-view></router-view></div>
 <template id="app-list">
-    <div style="margin: 0px 10px;">
+    <div>
         <div class="wln-title">
             <div style="float:right">
-                <el-button size="small" :plain="true" type="info" onclick="location.href = 'control'">返回</el-button>
-                <el-button size="small" type="primary" onclick="router.push('/staff/add')" v-if="editer">新增师资人员</el-button>
+                <el-button size="mini" :plain="true" type="info" onclick="location.href = 'control'">返回</el-button>
+                <el-button size="mini" type="primary" onclick="router.push('/staff/add')" v-if="editer">新增师资人员</el-button>
                 <input type="text" v-model="key" :value="key" @@keydown="search($event)" placeholder="按回车键进行查找"/>
             </div>
-            <el-select v-model="school" clearable placeholder="请先选择要管理的校园" @@change="schoolChange" style="width:320px;">
+            师资人员列表
+            <el-select v-model="school" clearable placeholder="请先选择要管理的校园" @@change="schoolChange" style="width:320px;vertical-align:middle;">
                 <el-option v-for="item in organs" :label="item.name" :value="item.id">
                     <span style="float:left">{{item.name}}</span>
                     <span style="float:right;color:#8492a6;font-size:13px">{{item.fullname}}</span>
                 </el-option>
             </el-select>
-            师资人员列表
         </div>
-        <el-table :data="rows" :empty-text="message" border>
+        <el-table :data="rows" :empty-text="message">
             <el-table-column width="90" align="center" label="姓名" property="name"></el-table-column>
             <el-table-column width="70" align="center" label="性别" property="sex"></el-table-column>
             <el-table-column width="270" align="center" label="校园" property="organ" v-if="school==''"></el-table-column>
             <el-table-column width="120" align="center" label="职位" property="position"></el-table-column>
             <el-table-column width="120" align="center" label="类型" property="type"></el-table-column>
             <el-table-column></el-table-column>
-            <el-table-column width="150" label="操作">
+            <el-table-column width="150" align="center" label="操作" v-if="editer">
                 <template scope="scope">
-                    <el-button size="small" @@click="handleEditer(scope.row)">编辑</el-button>
-                    <el-button size="small" type="danger" @@click="handleDelete(scope.row)">删除</el-button>
+                    <el-button size="mini" type="warning" icon="el-icon-edit" @@click="handleEditer(scope.row)">编辑</el-button>
+                    <el-button size="mini" type="danger" icon="el-icon-delete" @@click="handleDelete(scope.row)">删除</el-button>
                 </template>
             </el-table-column>
         </el-table>
@@ -33,50 +33,46 @@
     </div>
 </template>
 <template id="app-form">
-    <div class="wln">
-        <el-row :gutter="10">
-            <el-col :xs="12" :sm="10" :md="9" :lg="6">
-                <el-form ref="form" v-model="form" label-width="140px">
-                    <el-form-item label="姓名">
-                        <el-input v-model="form.name" style="width:275px;"></el-input>
-                    </el-form-item>
-                    <el-form-item label="性别">
-                        <el-select v-model="form.sex" placeholder="请选择" style="width:275px;">
-                            <el-option v-for="item in sexs" :label="item.label" :value="item.value"></el-option>
-                        </el-select>
-                    </el-form-item>
-                    <el-form-item label="职位">
-                        <el-input v-model="form.position" style="width:275px;"></el-input>
-                    </el-form-item>
-                    <el-form-item label="人员类型">
-                        <el-select v-model="form.type" placeholder="请选择" style="width:275px;">
-                            <el-option v-for="item in types" :label="item.label" :value="item.value"></el-option>
-                        </el-select>
-                    </el-form-item>
-                    <el-form-item label="所属校园">
-                        <el-select v-model="form.organ" placeholder="请选择" style="width:275px;">
-                            <el-option v-for="item in organs" :label="item.name" :value="item.id">
-                                <span style="float:left">{{item.name}}</span>
-                                <span style="float:right;color:#8492a6;font-size:13px">{{item.fullname}}</span>
-                            </el-option>
-                        </el-select>
-                    </el-form-item>
-                    <el-form-item label="照片">
-                        <el-input v-model="form.avatar" style="width:275px;"></el-input>
-                    </el-form-item>
-                    <el-form-item>
-                        <el-button type="primary" @@click="onSubmit">提交</el-button>
-                        <el-button onclick="router.push('/staff')">返回</el-button>
-                    </el-form-item>
-                </el-form>
-            </el-col>
-            <el-col :xs="6" :sm="6" :md="6" :lg="4">
-                <div class="grid-content bg-purple-light"></div>
-            </el-col>
-            <el-col :xs="0" :sm="0" :md="1" :lg="8">
-                <div class="grid-content bg-purple"></div>
-            </el-col>
-        </el-row>
+    <div>
+        <div class="wln-title">
+            <div style="float:right">
+                <el-button size="mini" type="info" :plain="true" onclick="history.back()">返回</el-button>
+            </div>
+            教师信息
+        </div>
+        <el-form ref="form" v-model="form" label-width="140px">
+            <el-form-item label="姓名">
+                <el-input v-model="form.name" style="width:275px;"></el-input>
+            </el-form-item>
+            <el-form-item label="性别">
+                <el-select v-model="form.sex" placeholder="请选择" style="width:275px;">
+                    <el-option v-for="item in sexs" :label="item.label" :value="item.value"></el-option>
+                </el-select>
+            </el-form-item>
+            <el-form-item label="职位">
+                <el-input v-model="form.position" style="width:275px;"></el-input>
+            </el-form-item>
+            <el-form-item label="人员类型">
+                <el-select v-model="form.type" placeholder="请选择" style="width:275px;">
+                    <el-option v-for="item in types" :label="item.label" :value="item.value"></el-option>
+                </el-select>
+            </el-form-item>
+            <el-form-item label="所属校园">
+                <el-select v-model="form.organ" placeholder="请选择" style="width:275px;">
+                    <el-option v-for="item in organs" :label="item.name" :value="item.id">
+                        <span style="float:left">{{item.name}}</span>
+                        <span style="float:right;color:#8492a6;font-size:13px">{{item.fullname}}</span>
+                    </el-option>
+                </el-select>
+            </el-form-item>
+            <el-form-item label="照片">
+                <el-input v-model="form.avatar" style="width:275px;"></el-input>
+            </el-form-item>
+            <el-form-item>
+                <el-button type="primary" @@click="onSubmit">提交</el-button>
+                <el-button onclick="router.push('/staff')">返回</el-button>
+            </el-form-item>
+        </el-form>
     </div>
 </template>
 <script type="text/javascript">
@@ -86,7 +82,6 @@
             emptyPager.school = '';
             emptyPager.organs = [];
             emptyPager.editer = false;
-            emptyPager.delrow = false;
             return emptyPager
         },
         methods: {
@@ -113,11 +108,8 @@
                 emptyPager.editer = false;
                 emptyPager.delrow = false;
                 $.getJSON('/organ', { 'do': val });
-                $.getJSON('/right', { 'do': 'editer', organ: val, code: 'FeeScale' }, function (rlt) {
+                $.getJSON('/auth', { organ: val, code: 'School_Class_Grade' }, function (rlt) {
                     emptyPager.editer = rlt.success;
-                })
-                $.getJSON('/right', { 'do': 'delete', organ: val, code: 'FeeScale' }, function (rlt) {
-                    emptyPager.delrow = rlt.success;
                 })
                 this.refresh();
             },
@@ -157,8 +149,13 @@
             $.getJSON('/organ', { 'do': 'list' }, function (rlt) {
                 _self.organs = rlt.data;
                 _self.school = rlt.select;
+                _self.refresh();
+                if (rlt.select) {
+                    $.getJSON('/auth', { organ: rlt.select, code: 'School_Class_Grade' }, function (rlt) {
+                        emptyPager.editer = rlt.success;
+                    })
+                }
             });
-            this.refresh();
         }
     })
     var appForm = Vue.extend({
