--- a/docker/Views/charge/refund.cshtml
+++ b/docker/Views/charge/refund.cshtml
@@ -47,38 +47,41 @@
 <template id="app-form">
     <div class="wln">
         <el-form ref="form" label-width="140px">
-            @if (string.IsNullOrEmpty(ViewBag.Student)){
-            <el-form-item>
-                <el-col :span="3" class="label">校园&nbsp;</el-col>
-                <el-col :span="18">
-                    <el-select v-model="school" placeholder="请选择" @@change="schoolChange" style="width:300px">
-                        <el-option v-for="item in organs" :label="item.name" :value="item.id">
-                            <span style="float:left">{{item.name}}</span>
-                            <span style="float:right;color:#8492a6;font-size:13px">{{item.fullname}}</span>
-                        </el-option>
-                    </el-select>
-                </el-col>
-            </el-form-item>
-            <el-form-item>
-                <el-col :span="3" class="label">学员&nbsp;</el-col>
-                <el-col :span="18">
-                    <el-select v-model="student" :filterable="true" :remote="true" :remote-method="remoteQuery" placeholder="请选择要申请退费的学员" style="width:300px;">
-                        <el-option v-for="item in students" :label="item.label" :value="item.id">
-                            <span style="display:inline-block;width:90px;">{{item.label}}</span>
-                            <span style="display:inline-block;width:120px;color:#8492a6;font-size:12px">学号：{{item.studentid}}</span>
-                            <span style="color:#8492a6;font-size:12px">{{item.classname}}</span>
-                        </el-option>
-                    </el-select>
-                </el-col>
-            </el-form-item>
-            } else {
-            <el-form-item>
-                <el-col :span="3" class="label">退费学员&nbsp;</el-col>
-                <el-col :span="18">
-                    <el-input v-model="studentname" style="width:300px;" disabled></el-input>
-                </el-col>
-            </el-form-item>
-            }
+            @if (string.IsNullOrEmpty(ViewBag.Student))
+    {
+        <el-form-item>
+            <el-col :span="3" class="label">校园&nbsp;</el-col>
+            <el-col :span="18">
+                <el-select v-model="school" placeholder="请选择" @@change="schoolChange" style="width:300px">
+                    <el-option v-for="item in organs" :label="item.name" :value="item.id">
+                        <span style="float:left">{{item.name}}</span>
+                        <span style="float:right;color:#8492a6;font-size:13px">{{item.fullname}}</span>
+                    </el-option>
+                </el-select>
+            </el-col>
+        </el-form-item>
+        <el-form-item>
+            <el-col :span="3" class="label">学员&nbsp;</el-col>
+            <el-col :span="18">
+                <el-select v-model="student" :filterable="true" :remote="true" :remote-method="remoteQuery" placeholder="请选择要申请退费的学员" style="width:300px;">
+                    <el-option v-for="item in students" :label="item.label" :value="item.id">
+                        <span style="display:inline-block;width:90px;">{{item.label}}</span>
+                        <span style="display:inline-block;width:120px;color:#8492a6;font-size:12px">学号：{{item.studentid}}</span>
+                        <span style="color:#8492a6;font-size:12px">{{item.classname}}</span>
+                    </el-option>
+                </el-select>
+            </el-col>
+        </el-form-item>
+}
+else
+{
+        <el-form-item>
+            <el-col :span="3" class="label">退费学员&nbsp;</el-col>
+            <el-col :span="18">
+                <el-input v-model="studentname" style="width:300px;" disabled></el-input>
+            </el-col>
+        </el-form-item>
+}
 
             <el-form-item>
                 <el-col :span="3" class="label">退费项目&nbsp;</el-col>
@@ -94,19 +97,25 @@
             <el-form-item>
                 <el-col :span="3" class="label">退费数量&nbsp;</el-col>
                 <el-col :span="18">
-                    <el-input type="text" :rows="2" v-model="count" placeholder="可不填" style="width:60px;"></el-input>&nbsp;<font color="#999999">支持小数，如：0.15</font> 
+                    <el-input type="text" :rows="2" v-model="count" placeholder="可不填" style="width:60px;"></el-input>&nbsp;<font color="#999999">支持小数，如：0.15</font>
                 </el-col>
             </el-form-item>
             <el-form-item>
                 <el-col :span="3" class="label">退费金额&nbsp;</el-col>
                 <el-col :span="18">
-                    <el-input type="text" :rows="2" v-model="amount" placeholder="必填" style="width:60px;"></el-input>&nbsp;<font color="#999999">退费金额必须大于零</font> 
+                    <el-input type="text" :rows="2" v-model="amount" placeholder="必填" style="width:60px;"></el-input>&nbsp;<font color="#999999">退费金额必须大于零</font>
                 </el-col>
             </el-form-item>
             <el-form-item>
                 <el-col :span="3" class="label">申请原因&nbsp;</el-col>
                 <el-col :span="18">
                     <el-input type="textarea" :rows="2" v-model="reasons" style="width:300px;"></el-input>
+                </el-col>
+            </el-form-item>
+            <el-form-item>
+                <el-col :span="3" class="label">退费时间&nbsp;</el-col>
+                <el-col :span="18">
+                    <el-date-picker v-model="create" align="right" type="date" placeholder="选择日期" style="width:150px;"></el-date-picker>
                 </el-col>
             </el-form-item>
             <el-form-item>
@@ -120,6 +129,7 @@
     </div>
 </template>
 <script type="text/javascript">
+    emptyPager.create = new Date();
     emptyPager.school = '@ViewBag.Organ';
     emptyPager.organs = [];
     emptyPager.student = '@Html.Raw(ViewBag.Student)';
@@ -259,7 +269,7 @@
                     emptyPager.Loaded = false;
                     $.post(location.pathname + '?do=set', {
                         organ: emptyPager.school, student: emptyPager.student, feescale: emptyPager.feescale
-                        , count: emptyPager.count, amount: emptyPager.amount, reasons: emptyPager.reasons
+                        , count: emptyPager.count, amount: emptyPager.amount, reasons: emptyPager.reasons, create: emptyPager.create.pattern("yyyy-MM-dd")
                     }, function (rlt) {
                         emptyPager.Loaded = true;
                         iTips(rlt.message, rlt.success);
