--- a/docker/Views/charge/refundall.cshtml
+++ b/docker/Views/charge/refundall.cshtml
@@ -7,12 +7,12 @@
             </div>
             退费审批
         </div>
-        <el-table :data="rows" :empty-text="message" border>
+        <el-table :data="rows" :empty-text="message">
             <el-table-column width="150" align="center" label="校园" property="organ"></el-table-column>
             <el-table-column width="150" align="center" label="学员姓名" property="studentname"></el-table-column>
             <el-table-column width="150" align="center" label="退费项目" property="feescalename"></el-table-column>
             <el-table-column width="100" align="center" label="退费数量" property="count"></el-table-column>
-            <el-table-column width="120" align="right" label="退费金额" property="amount"></el-table-column>
+            <el-table-column width="120" align="center" label="退费金额" property="amount"></el-table-column>
             <el-table-column align="left" label="申请原因" property="reasons"></el-table-column>
             <el-table-column width="140" align="center" label="申请时间" property="create"></el-table-column>
             <el-table-column width="90" align="center" label="状态">
